--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@lottiefiles/react-lottie-player": "^3.4.4",
     "@mui/icons-material": "^5.6.0",
     "@mui/material": "^5.6.0",
     "firebase": "^9.6.10",
