--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.6.0",
     "@mui/material": "^5.6.0",
     "firebase": "^9.6.10",
+    "notistack": "^2.0.4",
     "react": "^17.0.2",
     "react-countup": "^6.2.0",
     "react-dom": "^17.0.2",
